--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="C:\Users\jorda\OneDrive\Documents\Code Test\Cert Project Code\BuildQuizHTML-CSS\style.css" />
+    <link rel="stylesheet" href="C:\Users\jorda\OneDrive - Strategic Education\Documents\Code Test\Cert Project Code\BuildQuizHTML-CSS\style.css" />
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Im building a quiz"/>
