--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://github.com/jtsmith993/htmlquiz/blob/a23d9d861cfa64026d154f7a6175eecf944491c1/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Im building a quiz"/>
